# dpp-static-build

./: CMakeLists.txt  README.md
src/: main.cpp
